fix:sort menu on mobile via overlay

--- a/Frontend/src/styles/custom_materialize.scss
+++ b/Frontend/src/styles/custom_materialize.scss
@@ -295,9 +295,18 @@ span.thumb{
   display:none; /* preview thumb for range does not work */
 }
 
-.collection .collection-item {
-  padding: 2px 20px 9px 20px;
-  border-bottom: none;
+.collection {
+  .collection-item {
+    padding: 2px 20px 9px 20px;
+    border-bottom: none;
+  }
+  .collection-item-title{
+    color:$textLight;
+    font-size:80%;
+    font-weight: bold;
+    background-color: #fff;
+    padding:5px 10px;
+  }
 }
 .collection-item-seperate {
   border-top:1px solid #ccc!important;
